--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Understanding JavaScript's Capture</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/✅" />
 </head>
 <body class="bod">
 
@@ -43,6 +43,35 @@
 
 <button></button>
 <script>
+  // selects all the divs
+  const divs = document.querySelectorAll('div');
+
+  // selects the button
+  const button = document.querySelector('button');
+  
+  // log the class of the element
+  function logText(e) {
+    console.log(this.classList.value);
+    // e.stopPropagation(); // stop bubbling!
+    // console.log(this);
+  }
+
+  // bubbling: when nested elements in the div get clicked as well 
+  // when div is clicked, we log its class 
+  divs.forEach(div => div.addEventListener('click', logText, {
+    // if capture = true, then the handler bubbles downwards
+    // if capture = false, then the handler bubbles upwards
+    capture: false,
+
+    // makes element fire once if clicked
+    once: true
+  }));
+
+  button.addEventListener('click', () => {
+    console.log('Click!!!');
+  }, {
+    once: true
+  });
 
 </script>
 </body>
